--- a/resources/views/account/checkout.twig
+++ b/resources/views/account/checkout.twig
@@ -11,7 +11,7 @@
 			<div class="col-12">
 
 				<!-- Checkout Form s-->
-				<form action="#" class="checkout-form">
+				<div id="create-order-form" class="checkout-form">
 					<div class="row row-40">
 
 						<div class="col-lg-7 mb-20">
@@ -21,34 +21,23 @@
 								<h4 class="checkout-title">Shipping Address</h4>
 								<div class="row">
 									<div class="address-list col-md-12 col-12 mb-20">
-										<div class="address selected">
-											<div class="address-name">
-												Alex Tuntuni
-											</div>
-											<div class="address-address">
-												1355 Market St, Suite 900 San Francisco, CA 94103
-											</div>
-											<div class="address-mobile">
-												(123) 456-7890
-											</div>
-											<button class="address-select">
-												使用这个地址
-											</button>
-										</div>
 
-										<div class="address">
-											<div class="address-name">
-												Alex Tuntuni
+										{%for address in addresses%}
+											<div class="address {%if loop.first%}selected{%endif%}" data-id="{{address.id}}">
+												<div class="address-name">
+													{{address.name2}} {{address.name3}}
+												</div>
+												<div class="address-address">
+													{{address.address1}}
+												</div>
+												<div class="address-mobile">
+													{{address.phone}}
+												</div>
+												<button class="address-select">
+													使用这个地址
+												</button>
 											</div>
-											<div class="address-address">
-												1355 Market St, Suite 900 San Francisco, CA 94103
-											</div>
-											<div class="address-mobile">
-												(123) 456-7890
-											</div>
-											<button class="address-select">
-												使用这个地址
-											</button>
+										{%endfor%}
 										</div>
 									</div>
 									<div class="col-md-12 col-12 mb-20">
@@ -56,80 +45,76 @@
 									</div>
 								</div>
 
+						</div>
+
+						<!-- Shipping Address -->
+						<div id="shipping-form" class="mb-40">
+							<h4 class="checkout-title">New Address</h4>
+
+							<div class="row">
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>First Name*</label>
+									<input type="text" placeholder="First Name" name="first_name">
+								</div>
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>Last Name*</label>
+									<input type="text" placeholder="Last Name" name="second_name">
+								</div>
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>Email Address*</label>
+									<input type="email" placeholder="Email Address" name="email">
+								</div>
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>Phone no*</label>
+									<input type="text" placeholder="Phone number" name="phone">
+								</div>
+
+								<div class="col-12 mb-20">
+									<label>Company Name</label>
+									<input type="text" placeholder="Company Name" name="company_name">
+								</div>
+
+								<div class="col-12 mb-20">
+									<label>Address*</label>
+									<input type="text" placeholder="Address line 1" name="address1">
+									<input type="text" placeholder="Address line 2" name="address2">
+								</div>
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>Country*</label>
+									<select class="nice-select" name="country">
+									</select>
+								</div>
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>State*</label>
+									<select class="nice-select" name="state">
+									</select>
+								</div>
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>Town/City*</label>
+									<input type="text" placeholder="Town/City" name="town">
+								</div>
+
+								<div class="col-md-6 col-12 mb-20">
+									<label>Zip Code*</label>
+									<input type="text" placeholder="Zip Code" name="zipcode">
+								</div>
+
 							</div>
 
-							<!-- Shipping Address -->
-							<div id="shipping-form" class="mb-40">
-								<h4 class="checkout-title">New Address</h4>
-
-								<div class="row">
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>First Name*</label>
-										<input type="text" placeholder="First Name">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Last Name*</label>
-										<input type="text" placeholder="Last Name">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Email Address*</label>
-										<input type="email" placeholder="Email Address">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Phone no*</label>
-										<input type="text" placeholder="Phone number">
-									</div>
-
-									<div class="col-12 mb-20">
-										<label>Company Name</label>
-										<input type="text" placeholder="Company Name">
-									</div>
-
-									<div class="col-12 mb-20">
-										<label>Address*</label>
-										<input type="text" placeholder="Address line 1">
-										<input type="text" placeholder="Address line 2">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Country*</label>
-										<select class="nice-select">
-											<option>Bangladesh</option>
-											<option>China</option>
-											<option>country</option>
-											<option>India</option>
-											<option>Japan</option>
-										</select>
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Town/City*</label>
-										<input type="text" placeholder="Town/City">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>State*</label>
-										<input type="text" placeholder="State">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Zip Code*</label>
-										<input type="text" placeholder="Zip Code">
-									</div>
-
-								</div>
-
-								<div class="col-md-12 col-12 mb-20">
-									<button class="save-address">保存</button>
-								</div>
-
+							<div class="col-md-12 col-12 mb-20">
+								<button class="save-address">保存</button>
 							</div>
 
 						</div>
+
+					</div>
 
 						<div class="col-lg-5">
 							<div class="row">
@@ -144,16 +129,16 @@
 										<h4>Product <span>Total</span></h4>
 
 										<ul>
-											<li>Cillum dolore tortor nisl X 01 <span>$25.00</span></li>
-											<li>Auctor gravida pellentesque X 02 <span>$50.00</span></li>
-											<li>Condimentum posuere consectetur X 01 <span>$29.00</span></li>
-											<li>Habitasse dictumst elementum X 01 <span>$10.00</span></li>
+											{%for item in items%}
+												<li>{{item.name}} X {{item.quantity}}
+													<span>{{item.format_discount_price_quantity}}</span></li>
+											{%endfor%}
 										</ul>
 
-										<p>Sub Total <span>$104.00</span></p>
-										<p>Shipping Fee <span>$00.00</span></p>
+										<p>Sub Total <span>{{total}}</span></p>
+										<p>Shipping Fee <span>{{ship}}</span></p>
 
-										<h4>Grand Total <span>$104.00</span></h4>
+										<h4>Grand Total <span>{{total}}</span></h4>
 
 									</div>
 
@@ -166,9 +151,7 @@
 										<div class="single-method">
 											<input type="radio" id="payment_paypal" name="payment-method" value="paypal">
 											<label for="payment_paypal">Paypal</label>
-											<p data-method="paypal">Please send a Check to Store name with Store Street,
-											                        Store Town, Store State, Store Postcode, Store
-											                        Country.</p>
+											<p data-method="paypal">Paypay payment</p>
 										</div>
 										<div class="single-method">
 											<input type="checkbox" id="accept_terms">
@@ -182,13 +165,96 @@
 							</div>
 						</div>
 
-					</div>
-				</form>
-
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
+</div>
 
 <!--=====  End of Checkout page content  ======-->
 {%include 'Plentymarket::common.footer'%}
+
+<script type="text/html" id="address-tpl">
+	<div class="address" data-id="[id]">
+		<div class="address-name">
+			[first_name] [second_name]
+		</div>
+		<div class="address-address">
+			[address1]
+		</div>
+		<div class="address-mobile">
+			[phone]
+		</div>
+		<button class="address-select">
+			使用这个地址
+		</button>
+	</div>
+</script>
+<script type="text/javascript">
+
+    $(".save-address").on("click", function()
+    {
+        var data = {
+            first_name: $.trim($("input[name=first_name]").val()),
+            second_name: $.trim($("input[name=second_name]").val()),
+            company_name: $.trim($("input[name=company_name]").val()),
+            email: $.trim($("input[name=email]").val()),
+            phone: $.trim($("input[name=phone]").val()),
+            address1: $.trim($("input[name=address1]").val()),
+            address2: $.trim($("input[name=address2]").val()),
+            country: $.trim($("select[name=country]").val()),
+            state: $.trim($("select[name=state]").val()),
+            town: $.trim($("input[name=town]").val()),
+            zipcode: $.trim($("input[name=zipcode]").val())
+        };
+        $.get("/api/address/create", data, function(response)
+        {
+            response = JSON.parse(response);
+            if (response.code == 1)
+            {
+                data.id = response.data.id;
+                var reg = new RegExp("\\[([^\\[\\]]*?)\\]", "igm");
+                var address = $($("#address-tpl").html().replace(reg, function(key, value)
+                {
+                    return data[value];
+                }));
+                address.appendTo($(".address-list"));
+                address.find(".address-select").trigger("click");
+
+                $("#shipping-form").slideUp();
+                $(".create-address").parent().fadeIn();
+            }
+            else
+            {
+                spop({
+                    template: '{{trans('Plentymarket::WebAccountCheckout.create_address_failed')}}',
+                    style: "error"
+                });
+            }
+        });
+        return false;
+    });
+
+    var loadState = function(country_id)
+    {
+        $("#state").empty();
+        $.get("/api/index/state", { country_id: country_id }, function(response)
+        {
+            response = JSON.parse(response);
+            $.each(response.data, function(key, value)
+            {
+                if (value.country_id == country_id)
+                {
+                    $("#state").append("<option value=\"" + value.id + "\">" + value.name + "</option>");
+                }
+            });
+            $("#state").niceSelect("update");
+        });
+    };
+    loadState($("#country").val());
+    $("#country").on("change", function()
+    {
+        loadState($(this).val());
+    });
+</script>
