--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -249,9 +249,7 @@
 		<div class="row">
 			<div class="col-12">
 				<div class="cookie-desc">
-					MADE.COM and our partners use cookies to manage performance, advertising and customer experience. By
-					continuing, you agree to our use of cookies. Please review our policy to learn about managing
-					cookies.
+					cookie policy
 				</div>
 				<button class="cookie-accept">
 					ACCEPT
