--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -346,9 +346,9 @@
 										</li>
 										<li><a href="#">Column Two</a>
 											<ul>
-												<li><a href="my-account.html">My Account</a></li>
-												<li><a href="login-register.html">Login Register</a></li>
-												<li><a href="faq.html">FAQ</a></li>
+												<li><a href="/account/index">My Account</a></li>
+												<li><a href="/index/login_register">Login Register</a></li>
+												<li><a href="/index/faq">FAQ</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Column Three</a>
